# engineering-saas-platform

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/calc-engine/: Dockerfile  pyproject.toml
apps/calc-engine/app/: config.py  main.py
apps/calc-engine/app/engine/: dispatcher.py  load_combinations.py  pile_design_check.py  pile_group.py
apps/calc-engine/app/models/: calculation.py
apps/calc-engine/app/routers/: calculations.py  health.py
apps/calc-engine/app/standards/: loader.py
apps/calc-engine/tests/: test_api_integration.py  test_dispatcher.py  test_golden_fixtures.py  test_health.py  test_load_combinations.py  test_pile_design_check.py  test_pile_group.py  test_standards_loader.py
apps/calc-engine/tests/fixtures/: pile_group_golden.json
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
data/local-imports/: README.md
deployment/: DEV_DEPLOY_CHECKLIST.md  DEV_DEPLOY_RUNBOOK.md  DEV_ROLLBACK_CHECKLIST.md  ENV_STRATEGY.md  LOGGING.md  README.md  RUNBOOK.md
deployment/cloudbuild/: cloudbuild-api.yaml  cloudbuild-calc-engine.yaml  cloudbuild-migrate.yaml  cloudbuild-web.yaml
deployment/clouddeploy/: clouddeploy.yaml  skaffold.yaml
deployment/jobs/: migrate.sh  seed.sh
docs/adr/: 001-overall-architecture.md  002-multi-tenancy-model.md  005-catalogue-snapshots-and-imports.md  (+4 more)
(+255 files in other folders)
